--- a/octoprint_bufmon/templates/bufmon_navbar.jinja2
+++ b/octoprint_bufmon/templates/bufmon_navbar.jinja2
@@ -1,5 +1,5 @@
 <a class="pull-right">
     Planner: <span data-bind="text: lastPlanner"></span> [<span data-bind="text: meanPlanner"></span>]
     &nbsp;
-    Block: <span data-bind="text: lastBlock"></span> [<span data-bind="text: meanBlock"></span>]
+    Input: <span data-bind="text: lastInput"></span> [<span data-bind="text: meanInput"></span>]
 </a>
